<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

    <CheckBox
            android:id="@+id/curr_weather_update_enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curr_weather_update_enabled">
        <requestFocus/>
    </CheckBox>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_weather_update_frequency"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
            android:id="@+id/curr_weather_update_fq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"/>

    <CheckBox
            android:id="@+id/days5_weather_update_enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days5_weather_update_enabled"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days5_weather_frequency_update"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
            android:id="@+id/days5_weather_fq_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"/>

    <CheckBox
            android:id="@+id/days14_weather_update_enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days14_weather_update_enabled"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days14_weather_frequency_update"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
            android:id="@+id/days14_weather_fq_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"/>

    <Button
            android:id="@+id/submit_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/save_button_text" />
</LinearLayout>